# Qt-Application-Startup

./: CMakeLists.txt  Makefile  README.md  SampleApp  SampleApp.pro  clean.sh  main.cpp  mainwindow.cpp  mainwindow.h  manage_app.sh  moc_appointmentcontroller.cpp  moc_appointmentview.cpp  moc_confirmappointmentcontroller.cpp  moc_confirmappointmentview.cpp  moc_dashboardcontroller.cpp  moc_dashboardview.cpp  moc_doctorsearchcontroller.cpp  moc_doctorsearchview.cpp  moc_languageselectioncontroller.cpp  moc_languageselectionview.cpp  moc_mainwindow.cpp  moc_prescriptioncontroller.cpp  moc_prescriptionview.cpp  moc_telemedicinecontroller.cpp  moc_telemedicineview.cpp  qrc_resources.cpp  resources.qrc  run_app.sh  setup.py  setup.sh
include/: mainwindow.h
resources/images/: resources.qrc
src/: mainwindow.cpp
src/controller/: appointmentcontroller.cpp  appointmentcontroller.h  confirmappointmentcontroller.cpp  confirmappointmentcontroller.h  consultationcontroller.cpp  consultationcontroller.h  dashboardcontroller.cpp  dashboardcontroller.h  doctorsearchcontroller.cpp  doctorsearchcontroller.h  healthdatacontroller.cpp  healthdatacontroller.h  languageselectioncontroller.cpp  languageselectioncontroller.h  prescriptioncontroller.cpp  prescriptioncontroller.h  telemedicinecontroller.cpp  telemedicinecontroller.h
src/model/: appointmentmodel.cpp  appointmentmodel.h  confirmappointmentmodel.cpp  confirmappointmentmodel.h  consultationmodel.cpp  consultationmodel.h  dashboardmodel.cpp  dashboardmodel.h  doctorsearchmodel.cpp  doctorsearchmodel.h  healthdatamodel.cpp  (+7 more)
(+18 files in other folders)
